Bug 294214 - Printing bug for excel spreadsheets
Summary: Printing bug for excel spreadsheets
Status: RESOLVED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Sheets (KSpread) Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-16 09:19 UTC by bjoern.breitmeyer
Modified: 2012-03-01 03:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bjoern.breitmeyer 2012-02-16 09:19:01 UTC
Version:           svn (using KDE 4.8.0) 
OS:                Linux

It seems to be a general problem, that exists in at least words too, but its worse
for tables as spreadsheets tend to be landscape documents.

The problem is that printing of a spreadsheet is always done in landscape mode, even if the print dialog is set to landscape mode. The problem is that it does not utilize the space from landscape mode, it breaks it into portrait mode pages always.

Same thing applies to words and i were unable to find a per page pagesetting to define that directly in the applications.

Reproducible: Always

Steps to Reproduce:
Create a spreadsheet  with a length greater than A4 in portrait mode.
And print it.

Actual Results:  
The document is always splitting as if there is A4 portrait mode active, even
if the print is in landscape mode.

Expected Results:  
Splitting the document according to the set mode
Comment 1 Sebastian Sauer 2012-03-01 03:59:52 UTC
Fixed with commit 89239263d3cb.